# website_fastapi

./: README.md  main.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml
static/css/: styles.css
templates/: _base.html  index.html  servicos.html
