[tool.poetry]
name = "website-fastapi"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]
readme = "README.md"
packages = [{include = "website_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
Jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^5.0.4"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
